# gnome-shell-extension-valent

./: .editorconfig  .eslintrc.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REUSE.toml  gnome-shell-extension-valent.doap  meson.build  meson_options.txt  package.json
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: cd.yml  ci.yml  cr.yml
.reuse/: dep5
build-aux/docker/: Dockerfile  Dockerfile.toolbox
build-aux/meson/: mkzip.sh
build-aux/misc/: ego.sh  gnome-shell-extension-valent.spec
po/: LINGUAS  POTFILES  POTFILES.in  en.po  es.po  et.po  fr.po  gl.po  gnome-shell-extension-valent.pot  it.po  meson.build  nl.po  pt_BR.po  ru.po  te.po  zh_Hans.po
src/: clipboard.js  extension.js  meson.build  metadata.json.in  notification.js  remote.js  session.js  status.js  stylesheet.css
src/extension/: clipboard.js  device.js  extension.js  meson.build  metadata.json.in  notification.js  remote.js  session.js  status.js  stylesheet.css
src/plugin/: gnome-shell.plugin.in  meson.build
src/plugin/gnome-shell/: __init__.py
tests/: meson.build  potfiles-check.sh
tests/extra/: Dockerfile  yamllint.yml
tests/lint/: eslintrc-extra.yml  eslintrc-gjs.yml  eslintrc-shell.yml
